--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,8 @@ out/
 
 ### VS Code ###
 .vscode/
+
+### Sensitive Data ###
+src/main/resources/application.properties
+src/main/resources/application-dev.properties
+src/main/resources/application-pdn.properties
